.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:51:55 **** Incremental Build of configuration Debug for project MIDI_Adapter_UART_test ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'ReadRxBuffer':
../Core/Src/main.c:95:25: warning: implicit declaration of function 'ParseMIDI' [-Wimplicit-function-declaration]
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:106:6: warning: conflicting types for 'ParseMIDI'; have 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
  106 | void ParseMIDI(uint8_t* data, uint16_t length) {
      |      ^~~~~~~~~
../Core/Src/main.c:95:25: note: previous implicit declaration of 'ParseMIDI' with type 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:177:11: warning: implicit declaration of function 'HAL_TogglePin'; did you mean 'HAL_GPIO_TogglePin'? [-Wimplicit-function-declaration]
  177 |           HAL_TogglePin(GPIOD, LD4_GPIO_PIN);
      |           ^~~~~~~~~~~~~
      |           HAL_GPIO_TogglePin
../Core/Src/main.c:177:32: error: 'LD4_GPIO_PIN' undeclared (first use in this function); did you mean 'LD4_GPIO_Port'?
  177 |           HAL_TogglePin(GPIOD, LD4_GPIO_PIN);
      |                                ^~~~~~~~~~~~
      |                                LD4_GPIO_Port
../Core/Src/main.c:177:32: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:613:1: warning: control reaches end of non-void function [-Wreturn-type]
  613 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
15:52:27 **** Incremental Build of configuration Debug for project MIDI_Adapter_UART_test ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'ReadRxBuffer':
../Core/Src/main.c:95:25: warning: implicit declaration of function 'ParseMIDI' [-Wimplicit-function-declaration]
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:106:6: warning: conflicting types for 'ParseMIDI'; have 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
  106 | void ParseMIDI(uint8_t* data, uint16_t length) {
      |      ^~~~~~~~~
../Core/Src/main.c:95:25: note: previous implicit declaration of 'ParseMIDI' with type 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:177:11: warning: implicit declaration of function 'HAL_TogglePin'; did you mean 'HAL_GPIO_TogglePin'? [-Wimplicit-function-declaration]
  177 |           HAL_TogglePin(GPIOD, LD4_Pin);
      |           ^~~~~~~~~~~~~
      |           HAL_GPIO_TogglePin
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:613:1: warning: control reaches end of non-void function [-Wreturn-type]
  613 | }
      | ^
arm-none-eabi-gcc -o "MIDI_Adapter_UART_test.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Qynth\MIDI_Adapter_UART_test\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MIDI_Adapter_UART_test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
C:/ST/STM32CubeIDE_1.18.0/STM32CubeIDE/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344/tools/bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/bin/ld.exe: ./Core/Src/main.o: in function `main':
C:/Qynth/MIDI_Adapter_UART_test/Debug/../Core/Src/main.c:177:(.text.main+0x4c): undefined reference to `HAL_TogglePin'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:64: MIDI_Adapter_UART_test.elf] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
15:52:39 **** Incremental Build of configuration Debug for project MIDI_Adapter_UART_test ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'ReadRxBuffer':
../Core/Src/main.c:95:25: warning: implicit declaration of function 'ParseMIDI' [-Wimplicit-function-declaration]
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:106:6: warning: conflicting types for 'ParseMIDI'; have 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
  106 | void ParseMIDI(uint8_t* data, uint16_t length) {
      |      ^~~~~~~~~
../Core/Src/main.c:95:25: note: previous implicit declaration of 'ParseMIDI' with type 'void(uint8_t *, uint16_t)' {aka 'void(unsigned char *, short unsigned int)'}
   95 |                         ParseMIDI(&RxUART[OldPos], pos - OldPos);
      |                         ^~~~~~~~~
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:613:1: warning: control reaches end of non-void function [-Wreturn-type]
  613 | }
      | ^
arm-none-eabi-gcc -o "MIDI_Adapter_UART_test.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Qynth\MIDI_Adapter_UART_test\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MIDI_Adapter_UART_test.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MIDI_Adapter_UART_test.elf
 
arm-none-eabi-size  MIDI_Adapter_UART_test.elf 
arm-none-eabi-objdump -h -S MIDI_Adapter_UART_test.elf  > "MIDI_Adapter_UART_test.list"
   text	   data	    bss	    dec	    hex	filename
  31364	    104	   4096	  35564	   8aec	MIDI_Adapter_UART_test.elf
Finished building: default.size.stdout
 
Finished building: MIDI_Adapter_UART_test.list
 
